# nordlayer-qt

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
resources/: nordlayer-qt-autostart.desktop  nordlayer-qt-autostart.desktop.in  nordlayer-qt.desktop  nordlayer-qt.desktop.in  resources.qrc
scripts/: build.sh  run.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h  nordlayerclient.cpp  nordlayerclient.h  nordlayerparser.cpp  nordlayerparser.h  systemtraymanager.cpp  systemtraymanager.h  types.h
tests/: CMakeLists.txt  test_parser.cpp
